--- a/app/modules/add-to-cart-datail/add-to-cart-detail.component.html
+++ b/app/modules/add-to-cart-datail/add-to-cart-detail.component.html
@@ -87,6 +87,21 @@
                         id="btn_chkout"></Button>
             </GridLayout>
         </AbsoluteLayout>
-
+        <AbsoluteLayout id="customalert" style="width:80%;height:200;background-color:#DCDCDC;border-width: 2;border-color: #e27900;border-radius:15"  verticalAlignment="center"  horizontalAlignment="center" visibility="collapsed">
+            <GridLayout  rows="35,*,50" columns="*,*" style="width:100%;height:100%">
+                <label row="0" col="0" colSpan="2" text="Attention" style="background-color: #e27900;color:white;font-size: 22;text-align: center;border-top-left-radius: 13;border-top-right-radius: 15"></label>
+                <label row="1" col="0" colSpan="2" style="font-size: 15;margin:10" textwrap="true" text="Please login first for checkout! "></label>
+                <label  row="2" col="0" text="Cancel"  style="color:#e27900;font-size:15" (tap)="onAlertCancel()"  verticalAlignment="center"  horizontalAlignment="center" ></label>
+                <label  row="2" col="1" text="Login"  style="color:#e27900;font-size:15" (tap)="OnAlertOK()"  verticalAlignment="center"  horizontalAlignment="center" ></label>
+            </GridLayout>
+        </AbsoluteLayout>
+        <AbsoluteLayout id="deleteItemalert" style="width:80%;height:200;background-color:#DCDCDC;border-width: 2;border-color: #e27900;border-radius:15"  verticalAlignment="center"  horizontalAlignment="center" visibility="collapsed">
+            <GridLayout  rows="35,*,50" columns="*,*" style="width:100%;height:100%">
+                <label row="0" col="0" colSpan="2" text="Attention" style="background-color: #e27900;color:white;font-size: 22;text-align: center;border-top-left-radius: 13;border-top-right-radius: 15"></label>
+                <label row="1" col="0" colSpan="2" style="font-size: 15;margin:10" textwrap="true" text="Sure to delete item !"></label>
+                <label  row="2" col="0" text="Cancel"  style="color:#e27900;font-size:15" (tap)="onDeleteAlertCancel()"  verticalAlignment="center"  horizontalAlignment="center" ></label>
+                <label  row="2" col="1" text="Delete"  style="color:#e27900;font-size:15" (tap)="OnDeleteAlertOK()"  verticalAlignment="center"  horizontalAlignment="center" ></label>
+            </GridLayout>
+        </AbsoluteLayout>
     </GridLayout>
 </side-drawer-page>
