--- a/app/modules/checkout/checkout.component.html
+++ b/app/modules/checkout/checkout.component.html
@@ -27,7 +27,7 @@
 
 
     <Button horizontalAlignment="center" verticalAlignment="center" style="margin-bottom: 10;color:white;height:60;width: 60%;" row="1" col="0" text="Confirm Order" type="submit"
-             id="btn_confirm" (tap)="buyProduct()" visibility="visible"></Button>
+             id="btn_confirm" (tap)="postOrder()" visibility="visible"></Button>
 
 <!--    [nsRouterLink]="['/payment']"-->
     <StackLayout style="background-color: white" row="1" col="0" id="locationpicker" class="currentlocationlayout" verticalAlignment="bottom" visibility="collapse">
